--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -29,7 +29,8 @@
     <main>
         <section>
             <p>Building the Homepage for TechCon 2024 Conference Website</p>
-            <video src="https://youtu.be/5taka1Ftu-E?si=A4sgWpjn6IFPn67z">
+            <video width="320" height="240" autoplay>
+                <source src="https://youtu.be/5taka1Ftu-E?si=A4sgWpjn6IFPn67z">
                 watch this video
             </video>
         </section>
