--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -29,7 +29,7 @@
     <main>
         <section>
             <p>Building the Homepage for TechCon 2024 Conference Website</p>
-            <video width="320" height="240" controls>
+            <video controls>
                 <source src="https://youtu.be/5taka1Ftu-E?si=A4sgWpjn6IFPn67z">
                 watch this video
             </video>
