--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -6,6 +6,39 @@
     <title>About page</title>
 </head>
 <body>
+    <header>
+        <h1>About TechCon 2024</h1>
+        <nav>
+            <ul>
+                <li>
+                    <a href="about.html">Home</a>
+                </li>
+                <li>
+                    <a href="schedule.html">Schedule</a>
+                </li>
+                <li>
+                    <a href="register.html">Register</a>
+                </li>
+                <li>
+                    <a href="./contact.html" >Contact</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <article>
+            <h1>History</h1>
+            <p>TechCon began on 2022 as  a small firm and has evolved into one of the largest in Africa</p>
+            <img src="https://share.google/images/o8fHZ3EEtfMEMBS6b.jpg" alt="Historical image">
+            <img src="https://share.google/images/5Ifuzsphb8yTOPdC4.jpg" alt="The growing process">
+        </article>
+        <article>
+           <h2>Mission</h2> 
+           <p>Our mission is to inspire innovation and empower the future generation</p>
+        </article>
+
+    </main>
     <a href="./index.html">Homepage</a>
     <h1>About</h1>
 </body>
