--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -33,13 +33,30 @@
             <img src="https://share.google/images/o8fHZ3EEtfMEMBS6b.jpg" alt="Historical image">
             <img src="https://share.google/images/5Ifuzsphb8yTOPdC4.jpg" alt="The growing process">
         </article>
-        <article>
+
+        <section>
            <h2>Mission</h2> 
            <p>Our mission is to inspire innovation and empower the future generation</p>
-        </article>
+           <img src="">
+
+            <h2>"Past Speakers"</h2>
+            <h3>Dr. Owusu Ansah</h3>
+            <p>C.E.O of Tech connect</p>
+            <img src="https://share.google/images/KNM0kGwE10ZvAKH2X" alt="Portrait of Dr. Ada Lovelace">
+            </section>
+
+            <section>
+            <h3>Mrs Olivia Mennsah</h3>
+            <p>CEO of Omega Tech, who shared insights on Technology, and the future of AI at TechCon 2018.</p>
+            <img src="https://share.google/images/VV14wabiTOkAFZek3" alt="Portrait of Elon Musk speaking at TechCon">
+            </section>
 
     </main>
     <a href="./index.html">Homepage</a>
     <h1>About</h1>
+
+    <footer>
+        <p>&copy; 2024 TechCon</p>
+    </footer>
 </body>
 </html>
