--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -5,8 +5,78 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Schedule</title>
 </head>
+    <header>
+        <h1>Schedule for TechCon 2024</h1>
+        <nav>
+          ul>
+                <li>
+                    <a href="about.html">About me</a>
+                </li>
+                <li>
+                    <a href="schedule.html">Home</a>
+                </li>
+                <li>
+                    <a href="register.html">Register</a>
+                </li>
+                <li>
+                    <a href="./contact.html" >Contact</a>
+                </li>
+            </ul>  
+        </nav>
+    </header>
+
+    <main>
+  <h1>Conference Schedule</h1>
+
+  <table>
+    <caption>Detailed Schedule of Events for TechCon 2024</caption>
+    <thead>
+      <tr>
+        <th scope="col">Time</th>
+        <th scope="col">Session</th>
+        <th scope="col">Speaker</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>09:00 AM - 10:00 AM</td>
+        <td>Opening Keynote: The Future of Technology</td>
+        <td>Dr. Fei-Fei Li</td>
+      </tr>
+      <tr>
+        <td>10:15 AM - 11:15 AM</td>
+        <td>AI and Ethics: Challenges Ahead</td>
+        <td>Prof. Timnit Gebru</td>
+      </tr>
+      <tr>
+        <td>11:30 AM - 12:30 PM</td>
+        <td>Building Sustainable Tech Startups</td>
+        <td>Elon Musk</td>
+      </tr>
+      <tr>
+        <td>01:30 PM - 02:30 PM</td>
+        <td>Women in Tech: Breaking Barriers</td>
+        <td>Sheryl Sandberg</td>
+      </tr>
+      <tr>
+        <td>02:45 PM - 03:45 PM</td>
+        <td>Cybersecurity in the Modern World</td>
+        <td>Kevin Mitnick</td>
+      </tr>
+      <tr>
+        <td>04:00 PM - 05:00 PM</td>
+        <td>Panel Discussion: Innovation for the Next Decade</td>
+        <td>Multiple Speakers</td>
+      </tr>
+    </tbody>
+  </table>
+    </main>
 <body>
     <a href="./index.html">Homepage</a>
     <h1>Schedule</h1>
+
+    <footer>
+        <p>&copy; 2024 TechCon</p>
+    </footer>
 </body>
 </html>
