--- a/techcon_website/register.html
+++ b/techcon_website/register.html
@@ -5,6 +5,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
 </head>
+<header>
+    <h1>Register for TechCon 2024</h1>
+    <nav>
+        ul>
+                <li>
+                    <a href="about.html">About me</a>
+                </li>
+                <li>
+                    <a href="schedule.html">Schedule</a>
+                </li>
+                <li>
+                    <a href="register.html">Home</a>
+                </li>
+                <li>
+                    <a href="./contact.html" >Contact</a>
+                </li>
+            </ul>  
+    </nav>
+</header>
+
+    <main>
+  <h1>TechCon 2024 Registration</h1>
+
+  <form action="register-success.html" method="post">
+    <!-- Name Field -->
+    <label for="fullname">Full Name:</label>
+    <input type="text" id="fullname" name="fullname" required>
+    <br><br>
+
+    <!-- Email Field -->
+    <label for="email">Email Address:</label>
+    <input type="email" id="email" name="email" required>
+    <br><br>
+
+    <!-- Password Field -->
+    <label for="password">Password:</label>
+    <input type="password" id="password" name="password" required>
+    <br><br>
+
+    <!-- Confirm Password Field -->
+    <label for="confirm-password">Confirm Password:</label>
+    <input type="password" id="confirm-password" name="confirm-password" required>
+    <br><br>
+
+    <!-- Terms & Conditions -->
+    <input type="checkbox" id="terms" name="terms" required>
+    <label for="terms">I agree to the Terms and Conditions</label>
+    <br><br>
+
+    <!-- Submit Button -->
+    <button type="submit">Register Now</button>
+  </form>
+</main>
+
+    <footer>
+        <p>&copy; 2024 TechCon</p>
+    </footer>
 <body>
     <a href="./index.html">Homepage</a>
     <h1>Register</h1>
